2005-02-01  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b337

    * Change: removed unnecessary css definition in add_photos.php

    * Fix: css classed in watermark_album.php

    * Change: Removed unnecessary use of css classes and code indents in:
	- includes/add_photos/add_admin.inc
	- includes/add_photos/add_form.inc
	- includes/add_photos/add_other.inc
	
    * Fix: madmod1 skin was broken

    * Fix: Adjust madmod1 skin

    * Change: Applied RFE/Patch: #1032662, show navigation links to album in search result.

    * Fix: Do not use htmlentities in alt text in albums.php and in general (classes/Image.php)

    * Change: Adjust function to detect only skins that use new naming.

    * Change: Added ltr/rtl checks for iconmenu and adminbox

    * Change: Modidified display of print/mobile services and indenting in view_photo

    * Fix: removed [] around public stats links due to problems in rtl languages

2005-01-31  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b336

    * Fix: Prevent hidden image from being automatically selected as
      a new highlight when the existing highlight is deleted

2005-01-31  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b335

    * Fix: Prevent error if the user requesting the new password link
      doesn't exist anymore.

    * Change: Received the mPUSH associate account creation link from 
      Jon, and was finally able to link it up in the config wizard

2005-01-31  Christian Mohn <h0bbel@p0ggel.org> 1.5-cvs-b334

    *  Fix: Typo in setup/config_data.inc (Thanks bytenik)

2005-01-30  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b333

    * Fix: Ensure that if $album->photos is not empty, we save it to
      photos.dat - don't simply rely on transient->photosloaded being
      true, because if the photos somehow got stored in album.dat, this
      would fail.

    * Fix: Couple more possible unset-varaible issues

2005-01-30  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b332
