@@ -1,3 +1,9 @@
+2005-02-03  Bharat Mediratta  <bharat@menalto.com> 1.5-cvs-b338
+
+    * Added multisite support for caching albums.php.  You can now create a
+      file called cache-domain.com.html and it will use that instead of
+      cache.html.
+
 2005-02-01  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b337
 
     * Change: removed unnecessary css definition in add_photos.php
